fixed fade out and added a splatter but i have a problem with menu not showing up if intro wasnt skipped

--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 #intro {
+    user-select: none;
     display: flex;
     width: 100%;
     min-height: 100vh;
@@ -6,6 +7,7 @@
 }
 
 #intro .horror{
+    user-select: none;
     position: relative;
     width: 100%;
     min-height: 100vh;
@@ -23,7 +25,7 @@
 
 
 #intro .horror span {
-
+    user-select: none;
     opacity: 0; 
     position: absolute;
     left: 50%;
@@ -194,6 +196,7 @@ body {
 }
 
 #splash {
+    user-select: none;
     display: none;
     opacity: 0;
     visibility: hidden;
@@ -210,17 +213,20 @@ body {
 }
 
 #splash.showing {
+    user-select: none;
     display: flex;
     animation: splashFadeIn 1s ease-in forwards;
     visibility: visible;
 }
 
 #splash.hiding {
+    user-select: none;
     animation: splashFadeOut 1s ease-out forwards;
     visibility: visible;
 }
 
 #menu .title {
+    user-select: none;
     animation: waitThenReveal 6s ease-in-out forwards;
     transition: all 0.5s;
 
@@ -248,6 +254,7 @@ body {
 }
 
 #menu .subtitle {
+    user-select: none;
     animation: waitThenReveal 6s ease-in-out forwards;
     transition: all 0.5s;
     position: absolute;
@@ -273,10 +280,11 @@ body {
     display: none;
     opacity: 0;
     visibility: hidden;
-    flex-direction: column;
+    
+    position: relative;
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(180deg, #000000 0%, #220000 45%);
+    background: linear-gradient(180deg, #000000 0%, #360101 100%);
     z-index: 200;
     transition: opacity 0.5s ease, visibility 0.5s ease;
 }
@@ -421,48 +429,102 @@ body {
 }
 
 
-
 .splatterMenu {
+    overflow: none;
     position: absolute;
-    inset:0;
-    width: 100vw;
-    height: 100vh;
-
+    object-fit: cover;
+    inset: 0;
+    width: 50vmax;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    z-index: -1;
+    z-index: 0.2;
     pointer-events: none;
     background-image: url('splatterTrans.png');
     background-size: contain;
     background-repeat: no-repeat;
-
-    transform: scale(0.1);
+    transform: rotate(180deg) scale(0.1);
+    transform-origin: center;
+    opacity: 0;
 }
 
 
 @keyframes splat {
     0% {
+        top:5px;
         opacity: 0;
-        transform: scale(0.1);
+        transform: rotate(180deg) scale(0.1);
     }
     1% {
-        opacity: 1;
-        transform: scale(1.5);
+        opacity: 0;
+        
+        transform: rotate(180deg) scale(1.5);
     }
     5% {
-        transform: scale(0.8);
+        transform: rotate(180deg) scale(0.8);
     }
     10% {
-        transform: scale(1);
+        opacity:0;
+        text-shadow: red 0 0 10px;
+        transform: rotate(180deg) scale(1);
+    }
+    50% {
+        opacity: 0;
+        text-shadow: red 0 0 10px;
+        transform: rotate(180deg) scale(1.2);
+    }
+    75% {
+        opacity: 0.3;
+        transform: rotate(180deg) scale(1);
     }
     100% {
-        opacity: 1;
-        transform: scale(1);
+        opacity: 0.5;
+        object-fit: cover;
+        
+        transform: rotate(180deg) scale(1.01);
     }
 }
 
 .splatterMenu.active {
-    animation: splat 0.8s ease-out forwards;
+   
+    animation: splat 7s ease-out forwards;
+}
+
+
+#menu.show-menu {
+    display: flex !important;
+    flex-direction: column;
+    
+    z-index: 4 !important;
+    opacity: 1 !important;
+    visibility: visible !important;
+}
+
+
+
+
+
+.splatterMenu2 {
+    overflow: none;
+    position: absolute;
+    object-fit: cover;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    pointer-events: none;
+    background-image: url('splatterTrans.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform: rotate(180deg) scale(0.1);
+    transform-origin: center;
+    opacity: 0;
+}
+
+.splatterMenu2.active2 {
+    animation: splat 1s ease-out forwards;
 }
